fixed content overlapping with topnav

--- a/MedNet/wwwroot/Styles/Shared.css
+++ b/MedNet/wwwroot/Styles/Shared.css
@@ -17,6 +17,65 @@ body {
 }
 
 
+.sidebar {
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+}
+
+.sidebar a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+}
+
+.sidebar a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.sidebar a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+.content {
+    margin-left: 200px;
+    padding: 0px;
+}
+
+.content-full {
+    margin: 50px 15px 50px 15px;
+    padding: 0px;
+}
+
+@media screen and (max-width: 825px) {
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidevbar a {
+        float: left;
+    }
+    .content {
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .sidebar a {
+        text-align: center;
+        float: none;
+    }
+}
+
+
 .tooltip {
     position: relative;
     display: inline-block;
@@ -53,11 +112,13 @@ body {
 
 .topnav {
     top: 0;
-    position: fixed;
+    position: relative;
     overflow: hidden;
     background-color: #333;
     height: auto;
     min-width: 100%;
+    margin-bottom: 50px;
+    display: block;
 }
 
     .topnav a {
@@ -89,7 +150,7 @@ body {
     padding: 5px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 825px) {
     .topnav a:not(:first-child) {
         display: none;
     }
@@ -100,7 +161,7 @@ body {
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 825px) {
     .topnav.responsive {
         position: relative;
     }
@@ -117,7 +178,7 @@ body {
             text-align: left;
         }
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 825px) {
     .topnav-rbtn {
         float: left;
     }
